Java 8 compatibility.